# integrated_qa_system

./: .env.example  .gitignore  README.md  api.py  app.py  config.ini  config.ini.example  main.py  new_main.py  pyproject.toml  review.py
base/: __init__.py  chunk_config.py  config.py  health.py  logger.py  metrics.py  settings.py
db_models/: __init__.py  audit_log.py  base.py  conversation.py  eval_result.py  eval_run.py  refresh_token.py  tenant.py  user.py
gateway/: __init__.py  audit.py  auth.py  deps.py  middleware.py  rate_limiter.py  security.py  security_headers.py
mysql_qa/cache/: redis_client.py
mysql_qa/db/: mysql_client.py
mysql_qa/retrieval/: bm25_search.py
rag_qa/: __init__.py  rag_main.py
rag_qa/core/: document_processor.py  embedding_registry.py  ingestion_tracker.py  llamaindex_processor.py  new_rag_system.py  nli_guard.py  prompts.py  query_classifier.py  rag_system.py  strategy_selector.py  vector_store.py
rag_qa/data/: ingestion_tracker.db
rag_qa/edu_document_loaders/: edu_ocr.py  edu_pdfloader.py
rag_qa/edu_text_spliter/: chunk_strategy.py  edu_chinese_recursive_text_splitter.py  edu_model_text_spliter.py
rag_qa/eval/: eval_service.py
repositories/: __init__.py  audit_repo.py  conversation_repo.py  eval_repo.py  tenant_repo.py  user_repo.py
scripts/: chunk_sweep.py  migrate_add_chunk_config_snapshot.py  migrate_add_is_deleted.py  seed_default_tenant.py
static/: index.html
tests/: test_chunk_config.py  test_document_quality.py  test_eval_pipeline.py  test_gpu_fp16.py  test_hallucination_guard.py  test_strategy_cache.py
(+13 files in other folders)
