[project]
name = "integrated-qa-system"
version = "0.1.0"
requires-python = ">=3.11, <3.13"
dependencies = [
    "addict>=2.4.0",
    "datasets>=5.0.0",
    "fastapi>=0.136.3",
    "flagembedding>=1.4.0",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "milvus-model>=0.2.12",
    "modelscope>=1.37.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymilvus>=2.3.6,<3.0.0",
    "llama-index-core>=0.10.0",
    "llama-index-vector-stores-milvus>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "pymupdf>=1.27.2.3",
    "pymysql>=1.2.0",
    "bcrypt==4.1.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "rapidocr-paddle>=1.4.5",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "sentencepiece>=0.2.1",
    "starlette>=1.2.1",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
    "unstructured[md]>=0.23.1",
    "uvicorn>=0.49.0",
    "jose>=1.0.0",
]
